--- a/vercel.json
+++ b/vercel.json
@@ -1,45 +1,30 @@
-//{
-//  "version": 2,
-//  "builds": [
-//    {
-//      "src": "Config/wsgi.py",
-//      "use": "@vercel/python",
-//      "config": {
-//        "maxLambdaSize": "15mb",
-//        "runtime": "python3.9"
-//      }
-//    },
-//    {
-//      "src": "build_files.sh",
-//      "use": "@vercel/static-build",
-//      "config": {
-//        "distDir": "staticfiles_build"
-//      }
-//    }
-//  ],
-//  "routes": [
-//    {
-//      "src": "/static/(.*)",
-//      "dest": "/static/$1"
-//    },
-//    {
-//      "src": "/(.*)",
-//      "dest": "config/wsgi.py"
-//    }
-//  ]
-//}
-
 {
-    "builds": [{
-        "src": "Config/wsgi.py",
-        "use": "@ardnt/vercel-python-wsgi",
-        "config": { "maxLambdaSize": "15mb",
-        "runtime": "python3.9"}
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "vercel_app/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "Config/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "config/wsgi.py"
+    }
+  ]
 }
